--- a/app/yardWrk/accounts/templates/accounts/base.html
+++ b/app/yardWrk/accounts/templates/accounts/base.html
@@ -35,6 +35,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'yardSite:workerDashboard' %}">Worker</a>
                         </li>
+                        {% if user.is_superuser %}
+                            <li class="nav-item">
+                                <a href="{% url 'owner:owner_dashboard' %}" class="nav-link">Owner</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Account
