Worker and Customer Dashboard headers

--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -3,7 +3,7 @@
 {% block title %} Customer Dashboard {% endblock %}
 
 {% block content %}
-
+    <h1 class="mt-2 text-center">Customer Dashboard</h1>
     <div>
         <h1 class="mt-2">Pending Jobs</h1>
         <hr class="mt-0 mb-4">
