--- a/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-
+    <h1 class="mt-2 text-center">Worker Dashboard</h1>
     <div>
         <h1 class="mt-2">Assigned Jobs</h1>
         <hr class="mt-0 mb-4">
