--- a/app/yardWrk/yardSite/templates/yardSite/home.html
+++ b/app/yardWrk/yardSite/templates/yardSite/home.html
@@ -29,37 +29,18 @@
                 <form method="GET" action=".">
                     <div class="form-check my-3 ms-3">
                         <input class="form-check-input" name="zip" type="checkbox" id="flexCheckDefault" {% if 'zip' in checked %} checked {% endif %}>
-                        <label class="form-check-label" for="flexCheckDefault">JOBS NEAR ME</label>
+                        <label class="form-check-label" for="flexCheckDefault">Jobs Near Me</label>
                     </div>
-                    <div class="form-check my-3 ms-3">
-                        <input class="form-check-input" name="LWN" type="checkbox" id="flexCheckDefault" {% if 'LWN' in checked %} checked {% endif %}/>
-                        <label class="form-check-label" for="flexCheckDefault">LWN - LAWN CARE</label>
+                    {% for type in job_types %}
+                        <div class="form-check my-3 ms-3">
+                            <input class="form-check-input" name="{{ type.name }}" type="checkbox" id="flexCheckDefault" {% if type.name in checked %} checked {% endif %}>
+                            <label class="form-check-label" for="flexCheckDefault">{{ type }}</label>
+                        </div>
+                    {% endfor %}
+                    <div class="btn-group">
+                        <input type="submit" name="filter" value="Filter" class="btn btn-secondary ms-3">
+                        <input type="submit" name="clear" value="Clear" class="btn btn-dark">
                     </div>
-                    <div class="form-check my-3 ms-3">
-                        <input class="form-check-input" name="LND" type="checkbox" id="flexCheckDefault" {% if 'LND' in checked %} checked {% endif %}/>
-                        <label class="form-check-label" for="flexCheckDefault">LND - LANDSCAPING</label>
-                    </div>
-                    <div class="form-check my-3 ms-3">
-                        <input class="form-check-input" name="GAR" type="checkbox" id="flexCheckDefault" {% if 'GAR' in checked %} checked {% endif %}/>
-                        <label class="form-check-label" for="flexCheckDefault">GAR - GARDENING</label>
-                    </div>
-                    <div class="form-check my-3 ms-3">
-                        <input class="form-check-input" name="SNW" type="checkbox" id="flexCheckDefault" {% if 'SNW' in checked %} checked {% endif %}/>
-                        <label class="form-check-label" for="flexCheckDefault">SNW - SNOW REMOVAL</label>
-                    </div>
-                    <div class="form-check my-3 ms-3">
-                        <input class="form-check-input" name="PET" type="checkbox" id="flexCheckDefault" {% if 'PET' in checked %} checked {% endif %}/>
-                        <label class="form-check-label" for="flexCheckDefault">PET - PET CARE</label>
-                    </div>
-                    <div class="form-check my-3 ms-3">
-                        <input class="form-check-input" name="AUT" type="checkbox" id="flexCheckDefault" {% if 'AUT' in checked %} checked {% endif %}/>
-                        <label class="form-check-label" for="flexCheckDefault">AUT - AUTOMOTIVE</label>
-                    </div>
-                    <div class="form-check my-3 ms-3">
-                        <input class="form-check-input" name="MOV" type="checkbox" id="flexCheckDefault" {% if 'MOV' in checked %} checked {% endif %}/>
-                        <label class="form-check-label" for="flexCheckDefault">MOV - MOVING</label>
-                    </div>
-                    <button type="submit" class="btn btn-secondary ms-3">Filter</button>
                 </form>
                 
             </div>
