--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -50,6 +50,7 @@
                                 <h5 class="card-title">${{ job.cash_reward }}</h5>
                                 <p class="card-text">{{ job.preview_description }}</p>
                             </div>
+                            <a href="{% url 'yardSite:ownedJobDetails' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
                         </div>
                     </div>
                 {% endfor %}
@@ -72,6 +73,7 @@
                                 <h5 class="card-title">${{ job.cash_reward }}</h5>
                                 <p class="card-text">{{ job.preview_description }}</p>
                             </div>
+                            <a href="{% url 'yardSite:ownedJobDetails' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
                         </div>
                     </div>
 
