--- a/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
@@ -16,7 +16,7 @@
                             <div class="card-header">{{ job.job_type }}</div>
                             <div class="card-body">
                                 <h5 class="card-title">${{ job.cash_reward }}</h5>
-                                <p class="card-text">{{ job.description }}</p>
+                                <p class="card-text">{{ job.preview_description }}</p>
                             </div>
                             <a href="{% url 'yardSite:ownedJobDetails' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
                         </div>
@@ -39,7 +39,7 @@
                             <div class="card-header">{{ job.job_type }}</div>
                             <div class="card-body">
                                 <h5 class="card-title">${{ job.cash_reward }}</h5>
-                                <p class="card-text">{{ job.description }}</p>
+                                <p class="card-text">{{ job.preview_description }}</p>
                             </div>
                             <a href="{% url 'yardSite:ownedJobDetails' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
                         </div>
