--- a/app/yardWrk/accounts/templates/accounts/profile.html
+++ b/app/yardWrk/accounts/templates/accounts/profile.html
@@ -11,9 +11,9 @@
         <div class="row">
             <div class="col">
                 <h1 class="mt-2">Profile</h1>
-                <hr class="mt-0 mb-4">
+                <hr class="mt-0 mb-2">
                 <div class="form-group">
-                    <form>
+                    <form class="fs-5">
                         <div class="form-group">
                             <label for="username">Username</label>
                             <input type="text" class="form-control" id="id-username" value="{{ user.username }}" readonly>
@@ -29,16 +29,16 @@
                     </form>
 
                     <div class="mt-2 btn-group">
-                        <a class="btn btn-outline-secondary" href="{% url 'accounts:edit-profile' %}">Edit</a>
-                        <a class="btn btn-outline-dark" href="{% url 'accounts:change-password' %}">Change Password</a>
+                        <a class="btn btn-secondary" href="{% url 'accounts:edit-profile' %}">Edit</a>
+                        <a class="btn btn-dark" href="{% url 'accounts:change-password' %}">Change Password</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <h1 class="mt-2">Address</h1>
-                <hr class="mt-0 mb-4">
+                <hr class="mt-0 mb-2">
                 <div class="form-group">
-                    <form>
+                    <form class="fs-5">
                         <div class="form-group">
                             <label for="address">Address</label>
                             <input type="text" class="form-control" id="id-address" value="{{ user.address }}" readonly>
@@ -58,18 +58,18 @@
                     </form>
 
                     <a href="{% url 'accounts:edit-address' %}">
-                        <button class="mt-2 btn btn-outline-secondary">Edit</button>
+                        <button class="mt-2 btn btn-secondary">Edit</button>
                     </a>
                 </div>
             </div>
         </div>
     </div>
 
-    <h1 class="mt-2">Wallet</h1>
-    <hr class="mt-0 mb-4">
     <div class="container-fluid">
         <div class="row">
             <div class="col-6">
+                <h1 class="mt-2">Wallet</h1>
+                <hr class="mt-0 mb-2">
                 <div class="form-group">
                     <form>
                         <div class="form-group">
@@ -78,17 +78,22 @@
                         </div>
                     </form>
                 </div>
-                <form method="post" class="form-group">
-                    {% csrf_token %}
-                    $<input type="number" name="Add" value="0" min="0"></input>
-                    <button type="submit" class="btn btn-success">Add Funds</button>
-                </form>
-                <br>
-                <form method="post" class="form-group">
-                    {% csrf_token %}
-                    $<input type="number" name="Withdraw" value="0" min="0"></input>
-                    <button type="submit" class="btn btn-success">Withdraw Funds</button>
-                </form>
+                <div class="form-group">
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="row mt-2">
+                            <div class="col">
+                                <input type="number" name="value" value="0" min="0" class="input-lg form-control">
+                            </div>
+                            <div class="col">
+                                <div class="btn-group">
+                                    <input type="submit" name="add" value="Add" class="btn btn-success">
+                                    <input type="submit" name="withdraw" value="Withdraw" class="btn btn-dark">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
