--- a/app/yardWrk/yardSite/templates/yardSite/ownedJobDetails.html
+++ b/app/yardWrk/yardSite/templates/yardSite/ownedJobDetails.html
@@ -23,35 +23,21 @@
             <p class="card-text">Phone - {{ job.customer.user.phone }}</p>
         </div>
     </div>
-    <div class="row mt-2">
+    <div class="btn-group mt-2 w-100">
         {% if job.available %}
             {% if can_edit %}
-                <div class="col">
-                    <a href="{% url 'yardSite:editJob' job.id %}">
-                        <button class="w-100 mt-2 btn btn-outline-primary">Edit</button>
-                    </a>
-                </div>
+                <a href="{% url 'yardSite:editJob' job.id %}" class="btn btn-outline-primary fs-5">Edit</a>
             {% endif %}
             {% if can_assign %}
-                <div class="col">
-                    <a href="{% url 'yardSite:acceptedJob' job.id %}">
-                        <button class="w-100 mt-2 btn btn-outline-primary">Take Job</button>
-                    </a>
-                </div>
+                <a href="{% url 'yardSite:acceptedJob' job.id %}" class="btn btn-outline-primary fs-5">Take Job</a>
             {% endif %}
         {% else %}
             {% if not job.completed %}
                 {% if can_assign %}
-                    <div class="col">
-                        <a href="{% url 'yardSite:finishJob' job.id %}">
-                            <button class="w-100 mt-2 btn btn-outline-primary">Record Completion</button>
-                        </a>
-                    </div>
+                    <a href="{% url 'yardSite:finishJob' job.id %}" class="btn btn-outline-primary fs-5">Record Completion</a>
                 {% endif %}
             {% endif %}
         {% endif %}
-        <div class="col">
-            <button class="w-100 mt-2 btn btn-outline-primary" onclick="history.back()">Back</button>
-        </div>
+        <button class="btn btn-outline-dark fs-5" onclick="history.back()">Back</button>
     </div>    
 {% endblock %}
