--- a/app/yardWrk/yardSite/templates/yardSite/create-job-post.html
+++ b/app/yardWrk/yardSite/templates/yardSite/create-job-post.html
@@ -5,12 +5,11 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <h1 class="mt-2">Create Job Post</h1>
-    <hr class="mt-0 mb-4">
+    <h2>Create Job Post</h2>
+
     <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="mt-2 btn btn-outline-primary">Post</button>
-        <button class="mt-2 btn btn-outline-danger" onclick="history.back()">Cancel</button>
+        <button type="submit" class="btn btn-success">Post</button>
     </form>
 {%endblock%}
