--- a/app/yardWrk/yardSite/templates/yardSite/editJob.html
+++ b/app/yardWrk/yardSite/templates/yardSite/editJob.html
@@ -11,6 +11,6 @@
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-success">Update</button>
-        <button class="mt-2 btn btn-outline-danger" onclick="history.back()">Cancel</button>
+        <button class="btn btn-danger">Cancel</button>
     </form>
 {%endblock%}
