--- a/app/yardWrk/yardSite/templates/yardSite/sentReviewDetails.html
+++ b/app/yardWrk/yardSite/templates/yardSite/sentReviewDetails.html
@@ -1,12 +1,20 @@
-{{ review }}
-<div>
-    <ul>
-            <li>Date Posted: {{ review.published_date }} </li>
-            <li>Review: {{ review.review_text }} </li>
-            <li>Rating: {{ review.rating_num }} </li>
-            <li>RedListed?: {{ review.redList_bool }} </li>
-    </ul>
-    {% if review.available %}
-        <a href="{% url 'editReview' review.id %}">Edit Review</a>
-    {% endif %}
-</div>
+{% extends "yardSite/base.html" %}
+
+{% block title %} Review Details {% endblock %}
+
+{% block content %}
+    {{ review }}
+    
+    <div>
+        <ul>
+	    <li>Job Description: {{ review.job.description }} </li>
+	    <li>Date Posted: {{ review.published_date }} </li>
+	    <li>Review: {{ review.review_text }} </li>
+	    <li>Rating: {{ review.rating_num }} </li>
+	    <li>RedListed?: {{ review.redList_bool }} </li>
+    	</ul>
+    	<a href="{% url 'yardSite:editReview' review.id %}">
+            <button class="btn btn-primary" style="margin-bottom: 10px;">Edit Review</button>
+        </a>
+    </div>
+{% endblock %}
