--- a/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
@@ -85,9 +85,13 @@
                         <h5 class="card-header">{{ review.job.job_type}}</h5>
                         <div class="card-body">
                             <p class="card-text">{{ review.job.description}}</li>
-                            <p class="card-text">received a {{ review.rating_num }} rating</p>
+                            <p class="card-text">received a {{ review.rating_num }} rating.</p>
 			    <p class="card-text"> {{ review.review_text }}</p>
                         </div>
+			<a href="{% url 'yardSite:ownedReviewDetails' review.id %}">
+                            <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
+                        </a>
+
                     </div>
                 {% endfor %}
             </div>
