Fixed decimal issues with money

--- a/app/yardWrk/accounts/templates/accounts/profile.html
+++ b/app/yardWrk/accounts/templates/accounts/profile.html
@@ -83,7 +83,7 @@
                         {% csrf_token %}
                         <div class="row mt-2">
                             <div class="col">
-                                <input type="number" name="value" value="0" min="0" class="input-lg form-control">
+                                <input type="number" step="0.01" name="value" value="0" min="0" class="input-lg form-control">
                             </div>
                             <div class="col">
                                 <div class="btn-group">
