--- a/app/yardWrk/owner/templates/owner/owner-edit-specific-account.html
+++ b/app/yardWrk/owner/templates/owner/owner-edit-specific-account.html
@@ -2,20 +2,37 @@
 
 {% block content %}
 
-    <div>
-        <h1 class="mt-2">Account Balance for {{account.username}}, {{account.first_name}} {{account.last_name}}</h1>
-        <p>${{ account.wallet }}</p>
-        <form method="post" class="form-group">
-            {% csrf_token %}
-            $<input type="number" name="Add" value="0" min="0"></input>
-            <button type="submit" class="btn btn-success">Add Funds</button>
-        </form>
-        <br>
-        <form method="post" class="form-group">
-            {% csrf_token %}
-            $<input type="number" name="Withdraw" value="0" min="0"></input>
-            <button type="submit" class="btn btn-success">Remove Funds</button>
-        </form>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6">
+                <h1 class="mt-2">Account Balance for {{account.first_name}} {{account.last_name}} ({{account.username}})</h1>
+                <hr class="mt-0 mb-2">
+                <div class="form-group">
+                    <form>
+                        <div class="form-group">
+                            <label for="balance">Available Balance</label>
+                            <input type="text" class="form-control input-lg" id="id-balance" value="${{ account.wallet }}" readonly>
+                        </div>
+                    </form>
+                </div>
+                <div class="form-group">
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="row mt-2">
+                            <div class="col">
+                                <input type="number" step="0.01" name="value" value="0" min="0" class="input-lg form-control">
+                            </div>
+                            <div class="col">
+                                <div class="btn-group">
+                                    <input type="submit" name="Add" value="Add" class="btn btn-success">
+                                    <input type="submit" name="Withdraw" value="Withdraw" class="btn btn-dark">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
     <a href="{% url 'owner:owner_edit_account_balances' %}">
