job post deletion

--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -6,19 +6,20 @@
     <h1 class="mt-2 text-center">Customer Dashboard</h1>
     <div>
         <h1 class="mt-2">Pending Jobs</h1>
-        <hr class="mt-0 mb-4">
+        <hr class="mt-0 mb-2">
         {% if pending_jobs %}
-                <div class="card-columns">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5">
                     {% for job in pending_jobs %}
-                        <div class="card bg-light text-center">
-                            <h5 class="card-header">{{job.job_type}}</h5>
-                            <div class="card-body">
-                                <p class="card-text">{{job.description}}</li>
-                                <p class="card-text">Payment: ${{job.cash_reward}}</p>
+                        <div class="col mb-2">
+                            <div class="card text-center">
+                                <div class="card-header">{{ job.job_type }}</div>
+                                <div class="card-body">
+                                    <h5 class="card-title">${{ job.cash_reward }}</h5>
+                                    <p class="card-text">{{ job.preview_description }}</p>
+                                </div>
+                                <a href="{% url 'yardSite:ownedJobDetails' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
+
                             </div>
-                            <a href="{% url 'yardSite:ownedJobDetails' job.id %}">
-                                <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
-                            </a>
                         </div>
                     {% endfor %}
                 </div>
@@ -30,18 +31,18 @@
             <b>To post a job you must have a positive balance. Please add funds to your <a href="/accounts/profile">wallet.</a></b>
         {% else %}
             <a href="{% url 'yardSite:createJob' %}">
-                <button class="mt-2 btn btn-primary">Create Job</button>
+                <button class="btn btn-primary">Create Job</button>
             </a>
         {% endif %}
     </div>
 
     <div>
         <h1 class="mt-2">In Progress</h1>
-        <hr class="mt-0 mb-4">
+        <hr class="mt-0 mb-2">
         {% if progressing_jobs %}
-            <div class="card-columns">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5">
                 {% for job in progressing_jobs %}
-                    <div class="col">
+                    <div class="col mb-2">
                         <div class="card text-center">
                             <div class="card-header">{{ job.job_type }}</div>
                             <div class="card-body">
@@ -51,9 +52,6 @@
                             <a href="{% url 'yardSite:ownedJobDetails' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
 
                         </div>
-                        <a href="{% url 'yardSite:ownedJobDetails' job.id %}">
-                            <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
-                        </a>
                     </div>
                 {% endfor %}
             </div>
@@ -64,11 +62,11 @@
 
     <div>
         <h1 class="mt-2">Completed</h1>
-        <hr class="mt-0 mb-4">
+        <hr class="mt-0 mb-2">
         {% if completed_jobs %}
-            <div class="row row-cols-1 row-cols-md-6 g-4">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5">
                 {% for job in completed_jobs %}
-                    <div class="col">
+                    <div class="col mb-2">
                         <div class="card text-center">
                             <div class="card-header">{{ job.job_type }}</div>
                             <div class="card-body">
@@ -93,7 +91,7 @@
 
     <div>
         <h1 class="mt-2">Reviews received by workers</h1>
-        <hr class="mt-0 mb-4">
+        <hr class="mt-0 mb-2">
         {% if customerReviews %}
             <div class="card-columns">
                 {% for review in customerReviews %}
