--- a/app/yardWrk/yardSite/templates/yardSite/ownedJobDetails.html
+++ b/app/yardWrk/yardSite/templates/yardSite/ownedJobDetails.html
@@ -4,23 +4,24 @@
 
 {% block content %}
     <h1 class="mt-2">Job Details</h1>
-    <hr class="mt-0 mb-4">
-    <div class="card">
+    <hr class="mt-0 mb-2">
+    <div class="card fs-5">
         <div class="card-header">
             {{ job.job_type }} - Posted by {{ job.name }} ({{job.customer.user }})
         </div>
         <div class="card-body">
-            <h5 class="card-title">${{ job.cash_reward }}</h5>
+            <h5 class="card-title fs-3">${{ job.cash_reward }}</h5>
             <p class="card-text">{{ job.description }}</p>
             <p class="card-text">Status - Not Yet Implemented</p>
             {% if not job.available %}
                 <p class="card-text">Assigned to - {{ job.worker.user }}</p>
             {% endif %}
             <p class="card-text font-weight-bold">Expected Completion Date - {{ job.date_to_be_finished_by }}</p>
-            <h5 class="card-title">Address and Contact Info</h5>
+            <h5 class="card-title fs-3">Address and Contact Info</h5>
             <p class="card-text">Location - {{ job.customer.user.get_address }}</p>
             <p class="card-text">Email - {{ job.customer.user.email }}</p>
             <p class="card-text">Phone - {{ job.customer.user.phone }}</p>
+            <a href="{% url 'yardSite:delete_job' job.id %}" class="btn btn-outline-danger fs-5 float-end">Delete</a>
         </div>
     </div>
     <div class="btn-group mt-2 w-100">
