--- a/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
@@ -6,11 +6,11 @@
     <h1 class="mt-2 text-center">Worker Dashboard</h1>
     <div>
         <h1 class="mt-2">Assigned Jobs</h1>
-        <hr class="mt-0 mb-4">
+        <hr class="mt-0 mb-2">
         {% if assigned %}
-            <div class="row row-cols-1 row-cols-md-6 g-4">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5">
                 {% for job in assigned %}
-                    <div class="col">
+                    <div class="col mb-2">
                         <div class="card text-center">
                             <div class="card-header">{{ job.job_type }}</div>
                             <div class="card-body">
@@ -29,11 +29,11 @@
 
     <div>
         <h1 class="mt-2">Completed Jobs</h1>
-        <hr class="mt-0 mb-4">
+        <hr class="mt-0 mb-2">
         {% if completed %}
-            <div class="row row-cols-1 row-cols-md-6 g-4">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5">
                 {% for job in completed %}
-                    <div class="col">
+                    <div class="col mb-2">
                         <div class="card text-center">
                             <div class="card-header">{{ job.job_type }}</div>
                             <div class="card-body">
@@ -58,20 +58,22 @@
 
     <div>
         <h1 class="mt-2">Reviews received by customers</h1>
-        <hr class="mt-0 mb-4">
+        <hr class="mt-0 mb-2">
         {% if workerReviews %}
-            <div class="row row-cols-1 row-cols-md-6 g-4">
+            <div class="row">
                 {% for review in workerReviews %}
-                    <div class="card bg-light text-center">
-                        <div class="card-header">{{ review.job.job_type}}</div>
-                          <div class="card-body">
-                            <p class="card-text">{{ review.job.description}}</li>
-                            <p class="card-text">received a {{ review.rating_num }} star rating</p>
-			    <p class="card-text"> {{ review.review_text }}</p>
+                    <div class="col mb-2">
+                        <div class="card bg-light text-center">
+                            <div class="card-header">{{ review.job.job_type}}</div>
+                            <div class="card-body">
+                                <p class="card-text">{{ review.job.description}}</li>
+                                <p class="card-text">received a {{ review.rating_num }} star rating</p>
+                                <p class="card-text"> {{ review.review_text }}</p>
+                            </div>
+                                <a href="{% url 'yardSite:ownedReviewDetails' review.id %}">
+                                <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
+                            </a>
                         </div>
-			<a href="{% url 'yardSite:ownedReviewDetails' review.id %}">
-                            <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
-                        </a>
                     </div>
                 {% endfor %}
             </div>
